# pretrain-zero-rl

./: .env.example  .gitignore  avatarl.py  evaluate_critic.py  load_critic_4bit.py  load_critic_hf.py  prepare_data.py  pyproject.toml  sample.py  start.sh  train.py
config/: train_avatarl.py
models/: qwen3.py  qwen_tokenizer.py
slurm/: train.sh
