[project]
name = "pretrain-zero-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets==3.6.0",
    "python-dotenv==1.2.1",
    "tiktoken==0.9.0",
    "tokenizers==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "wandb==0.19.11",
]
